--- a/WebRoot/raw/css/common/reset.scss
+++ b/WebRoot/raw/css/common/reset.scss
@@ -1,5 +1,5 @@
 body, div, dl, dt, dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td,menu{margin:0;padding:0;}
-html,body{width:100%;height:100%;min-height:100%;_height:100%;color : #4d4d4d; background-color:#fff;font : 16px 'Microsoft YaHei','Arial';}
+html,body{width:100%;color : #4d4d4d; background-color:#fff;font : 16px 'Microsoft YaHei','Arial';}
 table{border-collapse:collapse;border-spacing:0;}
 fieldset,img {border:0;}
 address,caption, cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}
